# pollinet-rag-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.full.yml  docker-compose.yml  env.example  fly.toml
examples/: add_documents.rs
src/: bot.rs  config.rs  handlers.rs  http_server.rs  lib.rs  main.rs  rag.rs  scheduler.rs  twitter_sync.rs
